@@ -1,3 +1,11 @@
+2009-06-13  Chris Morley <c.morley@gaseq.co.uk>
+	
+	* src/formats/mdlformat.cpp: Read V property line.
+	Put contents into a OBPairData with attribute "AtomValue"
+	attached to the OBAtom, and, if the -av option is NOT set, 
+	also interpret as a partial charge.
+	Fix for #2805389
+
 2009-06-08  Michael Banck  <mbanck@gmx.net>
 
 	* src/formats/gamessformat.cpp (ReadMolecule): Tighten match for
